<?xml version="1.0"?>
<package format="2">
  <name>test_nodelets</name>
  <version>0.1.0</version>
  <description>The test_nodelets package</description>


  <maintainer email="tejas@todo.todo">tejas</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_export_depend>roscpp</build_export_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
